@@ -1,216 +1,181 @@
 package com.example.thuedocosplay.service;
 
 import com.example.thuedocosplay.dto.request.UpsertPromotionRequest;
+import com.example.thuedocosplay.dto.request.UpsertVoucherRequest;
 import com.example.thuedocosplay.dto.response.PromotionResponse;
-import com.example.thuedocosplay.entity.Promotion;
-import com.example.thuedocosplay.entity.User;
-import com.example.thuedocosplay.entity.enums.PromotionStatus;
-import com.example.thuedocosplay.entity.enums.UserRole;
+import com.example.thuedocosplay.dto.response.VoucherResponse;
+import com.example.thuedocosplay.entity.Voucher;
+import com.example.thuedocosplay.entity.enums.PromotionType;
+import com.example.thuedocosplay.entity.enums.VoucherAudience;
+import com.example.thuedocosplay.entity.enums.VoucherDiscountType;
+import com.example.thuedocosplay.entity.enums.VoucherProductScope;
+import com.example.thuedocosplay.entity.enums.VoucherStatus;
 import com.example.thuedocosplay.exception.ResourceNotFoundException;
-import com.example.thuedocosplay.repository.PromotionRepository;
-import com.example.thuedocosplay.repository.UserRepository;
+import com.example.thuedocosplay.repository.VoucherRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.access.AccessDeniedException;
-import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PromotionService {
 
-    private final PromotionRepository promotionRepository;
-    private final UserRepository userRepository;
+    private final VoucherService voucherService;
+    private final VoucherRepository voucherRepository;
 
     @Transactional(readOnly = true)
     public List<PromotionResponse> listBySeller(String email) {
-        User seller = requireSeller(email);
-        return promotionRepository.findBySeller_IdOrderByCreatedAtDesc(seller.getId())
-                .stream().map(PromotionResponse::from).collect(Collectors.toList());
+        return voucherService.listSellerVouchers(email).stream()
+                .map(this::toPromotionResponse)
+                .toList();
     }
 
     @Transactional
     public PromotionResponse create(String email, UpsertPromotionRequest req) {
-        User seller = requireSeller(email);
-
-        String upperCode = req.getCode().toUpperCase();
-        if (promotionRepository.existsByCodeIgnoreCase(upperCode)) {
-            throw new IllegalArgumentException("Mã voucher '" + upperCode + "' đã tồn tại");
-        }
-
-        Promotion promotion = Promotion.builder()
-                .seller(seller)
-                .code(upperCode)
-                .title(req.getTitle())
-                .type(req.getType())
-                .value(req.getValue())
-                .minOrderAmount(req.getMinOrderAmount())
-                .maxUses(req.getMaxUses())
-                .usedCount(0)
-                .startDate(req.getStartDate())
-                .endDate(req.getEndDate())
-                .targetAudience(req.getTargetAudience() != null ? req.getTargetAudience() : "all")
-                .applyTo(req.getApplyTo() != null ? req.getApplyTo() : "all-costumes")
-                .extraCondition(req.getExtraCondition())
-                .status(PromotionStatus.ACTIVE)
-                .build();
-
-        return PromotionResponse.from(promotionRepository.save(promotion));
+        VoucherResponse voucher = voucherService.createSellerVoucher(email, toVoucherRequest(req));
+        return toPromotionResponse(voucher);
     }
 
     @Transactional
     public PromotionResponse update(String email, Long id, UpsertPromotionRequest req) {
-        User seller = requireSeller(email);
-        Promotion promotion = getOwnedPromotion(seller, id);
-
-        String upperCode = req.getCode().toUpperCase();
-        if (!promotion.getCode().equalsIgnoreCase(upperCode)
-                && promotionRepository.existsByCodeIgnoreCase(upperCode)) {
-            throw new IllegalArgumentException("Mã voucher '" + upperCode + "' đã tồn tại");
-        }
-
-        promotion.setCode(upperCode);
-        promotion.setTitle(req.getTitle());
-        promotion.setType(req.getType());
-        promotion.setValue(req.getValue());
-        promotion.setMinOrderAmount(req.getMinOrderAmount());
-        promotion.setMaxUses(req.getMaxUses());
-        promotion.setStartDate(req.getStartDate());
-        promotion.setEndDate(req.getEndDate());
-        promotion.setTargetAudience(req.getTargetAudience());
-        promotion.setApplyTo(req.getApplyTo());
-        promotion.setExtraCondition(req.getExtraCondition());
-
-        return PromotionResponse.from(promotionRepository.save(promotion));
+        VoucherResponse voucher = voucherService.updateSellerVoucher(email, id, toVoucherRequest(req));
+        return toPromotionResponse(voucher);
     }
 
     @Transactional
     public PromotionResponse toggleStatus(String email, Long id) {
-        User seller = requireSeller(email);
-        Promotion promotion = getOwnedPromotion(seller, id);
-
-        if (promotion.getStatus() == PromotionStatus.ACTIVE) {
-            promotion.setStatus(PromotionStatus.PAUSED);
-        } else {
-            promotion.setStatus(PromotionStatus.ACTIVE);
-        }
-
-        return PromotionResponse.from(promotionRepository.save(promotion));
+        return toPromotionResponse(voucherService.toggleSellerVoucher(email, id));
     }
 
     @Transactional
     public PromotionResponse duplicate(String email, Long id) {
-        User seller = requireSeller(email);
-        Promotion source = getOwnedPromotion(seller, id);
-
-        // Generate unique code
-        String newCode = source.getCode() + "_COPY";
-        int attempt = 0;
-        while (promotionRepository.existsByCodeIgnoreCase(newCode)) {
-            attempt++;
-            newCode = source.getCode() + "_COPY" + attempt;
-        }
-
-        Promotion copy = Promotion.builder()
-                .seller(seller)
-                .code(newCode)
-                .title(source.getTitle() + " (bản sao)")
-                .type(source.getType())
-                .value(source.getValue())
-                .minOrderAmount(source.getMinOrderAmount())
-                .maxUses(source.getMaxUses())
-                .usedCount(0)
-                .startDate(source.getStartDate())
-                .endDate(source.getEndDate())
-                .targetAudience(source.getTargetAudience())
-                .applyTo(source.getApplyTo())
-                .extraCondition(source.getExtraCondition())
-                .status(PromotionStatus.DRAFT)
-                .build();
-
-        return PromotionResponse.from(promotionRepository.save(copy));
+        return toPromotionResponse(voucherService.duplicateSellerVoucher(email, id));
     }
 
     @Transactional
     public void delete(String email, Long id) {
-        User seller = requireSeller(email);
-        Promotion promotion = getOwnedPromotion(seller, id);
-        promotionRepository.delete(promotion);
+        voucherService.deleteSellerVoucher(email, id);
     }
 
     @Transactional(readOnly = true)
     public PromotionSummary getSummary(String email) {
-        User seller = requireSeller(email);
-        long active = promotionRepository.countActiveBySeller(seller.getId());
-        Long totalUsed = promotionRepository.sumUsedCountBySeller(seller.getId());
-        long expiringSoon = promotionRepository
-                .findActiveBySellerAndDate(seller.getId(), LocalDate.now())
-                .stream()
-                .filter(p -> p.getEndDate() != null && p.getEndDate().isBefore(LocalDate.now().plusDays(4)))
-                .count();
-
-        return new PromotionSummary(active, totalUsed != null ? totalUsed : 0L, expiringSoon);
+        VoucherService.VoucherSummary s = voucherService.getSellerSummary(email);
+        return new PromotionSummary(s.active(), s.totalUsed(), s.expiringSoon());
     }
 
-    @Transactional
+    @Transactional(readOnly = true)
     public PromotionResponse checkAndApplyPromotion(String code, BigDecimal cartTotal) {
-        Promotion promotion = promotionRepository.findByCodeIgnoreCase(code)
-                .orElseThrow(() -> new IllegalArgumentException("Mã khuyến mãi không tồn tại"));
-
-        if (promotion.getStatus() != PromotionStatus.ACTIVE) {
-            throw new IllegalArgumentException("Mã khuyến mãi đã hết hạn hoặc tạm dừng");
-        }
-
-        if (promotion.getStartDate() != null && promotion.getStartDate().isAfter(LocalDate.now())) {
-            throw new IllegalArgumentException("Mã khuyến mãi chưa tới thời gian áp dụng");
-        }
-
-        if (promotion.getEndDate() != null && promotion.getEndDate().isBefore(LocalDate.now())) {
-            throw new IllegalArgumentException("Mã khuyến mãi đã hết hạn");
-        }
-
-        if (promotion.getMaxUses() != null && promotion.getUsedCount() >= promotion.getMaxUses()) {
-            throw new IllegalArgumentException("Mã khuyến mãi đã hết lượt sử dụng");
-        }
-
-        if (promotion.getMinOrderAmount() != null && cartTotal.compareTo(promotion.getMinOrderAmount()) < 0) {
-            throw new IllegalArgumentException("Đơn hàng chưa đạt giá trị tối thiểu " + promotion.getMinOrderAmount() + "đ");
-        }
-
-        return PromotionResponse.from(promotion);
+        Voucher voucher = voucherRepository.findByCodeIgnoreCase(normalizeCode(code))
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy voucher"));
+        validateSimpleVoucher(voucher, cartTotal);
+        return PromotionResponse.fromVoucher(voucher);
     }
 
     @Transactional
     public void incrementUsedCount(String code) {
         if (code == null || code.isBlank()) return;
-        promotionRepository.findByCodeIgnoreCase(code).ifPresent(p -> {
-            p.setUsedCount(p.getUsedCount() + 1);
-            promotionRepository.save(p);
+        voucherRepository.findByCodeIgnoreCase(normalizeCode(code)).ifPresent(voucher -> {
+            voucher.setUsedCount((voucher.getUsedCount() == null ? 0 : voucher.getUsedCount()) + 1);
+            voucherRepository.save(voucher);
         });
     }
 
-    // ---- helpers ----
-
-    private User requireSeller(String email) {
-        if (email == null) throw new AuthenticationCredentialsNotFoundException("Chưa đăng nhập");
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy người dùng"));
-        if (user.getRole() != UserRole.SELLER) throw new AccessDeniedException("Chỉ seller mới có quyền này");
-        return user;
+    private UpsertVoucherRequest toVoucherRequest(UpsertPromotionRequest req) {
+        UpsertVoucherRequest voucher = new UpsertVoucherRequest();
+        voucher.setTitle(req.getTitle());
+        voucher.setCode(normalizeCode(req.getCode()));
+        voucher.setDiscountType(toVoucherDiscountType(req.getType()));
+        voucher.setDiscountValue(req.getValue());
+        voucher.setMinimumOrderAmount(req.getMinOrderAmount() == null ? BigDecimal.ZERO : req.getMinOrderAmount());
+        voucher.setUsageLimit(req.getMaxUses());
+        voucher.setPerUserLimit(1);
+        voucher.setStartsAt(startOfDay(req.getStartDate()));
+        voucher.setEndsAt(endOfDay(req.getEndDate()));
+        voucher.setStatus(VoucherStatus.ACTIVE);
+        voucher.setAudience(toVoucherAudience(req.getTargetAudience()));
+        voucher.setProductScope(VoucherProductScope.SELLER_PRODUCTS);
+        voucher.setStackable(false);
+        voucher.setDescription(req.getExtraCondition());
+        return voucher;
     }
 
-    private Promotion getOwnedPromotion(User seller, Long id) {
-        Promotion p = promotionRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy khuyến mãi #" + id));
-        if (!p.getSeller().getId().equals(seller.getId())) {
-            throw new AccessDeniedException("Bạn không có quyền truy cập khuyến mãi này");
+    private PromotionResponse toPromotionResponse(VoucherResponse voucher) {
+        Voucher entity = Voucher.builder()
+                .id(voucher.getId())
+                .code(voucher.getCode())
+                .title(voucher.getTitle())
+                .discountType(voucher.getDiscountType())
+                .discountValue(voucher.getDiscountValue())
+                .minimumOrderAmount(voucher.getMinimumOrderAmount())
+                .usageLimit(voucher.getUsageLimit())
+                .usedCount(voucher.getUsedCount())
+                .startsAt(voucher.getStartsAt())
+                .endsAt(voucher.getEndsAt())
+                .audience(voucher.getAudience())
+                .productScope(voucher.getProductScope())
+                .status(voucher.getStatus())
+                .description(voucher.getDescription())
+                .createdAt(voucher.getCreatedAt())
+                .build();
+        return PromotionResponse.fromVoucher(entity);
+    }
+
+    private void validateSimpleVoucher(Voucher voucher, BigDecimal cartTotal) {
+        LocalDateTime now = LocalDateTime.now();
+        if (Boolean.TRUE.equals(voucher.getDeleted())) {
+            throw new IllegalArgumentException("Voucher đã bị xóa");
         }
-        return p;
+        if (voucher.getStatus() != VoucherStatus.ACTIVE) {
+            throw new IllegalArgumentException("Voucher không đang hoạt động");
+        }
+        if (voucher.getStartsAt() != null && voucher.getStartsAt().isAfter(now)) {
+            throw new IllegalArgumentException("Voucher chua d?n th?i gian s? d?ng");
+        }
+        if (voucher.getEndsAt() != null && voucher.getEndsAt().isBefore(now)) {
+            throw new IllegalArgumentException("Voucher đã hết hạn");
+        }
+        BigDecimal minimum = voucher.getMinimumOrderAmount() == null ? BigDecimal.ZERO : voucher.getMinimumOrderAmount();
+        if (cartTotal != null && cartTotal.compareTo(minimum) < 0) {
+            throw new IllegalArgumentException("Đơn hàng chưa đạt giá trị tối thiểu " + minimum + "d");
+        }
+        if (voucher.getUsageLimit() != null && voucher.getUsedCount() != null
+                && voucher.getUsedCount() >= voucher.getUsageLimit()) {
+            throw new IllegalArgumentException("Voucher đã hết lượt sử dụng");
+        }
+    }
+
+    private VoucherDiscountType toVoucherDiscountType(PromotionType type) {
+        if (type == PromotionType.AMOUNT) return VoucherDiscountType.FIXED_AMOUNT;
+        if (type == PromotionType.FREESHIP) return VoucherDiscountType.FREE_SHIPPING;
+        return VoucherDiscountType.PERCENTAGE;
+    }
+
+    private VoucherAudience toVoucherAudience(String targetAudience) {
+        if ("new".equalsIgnoreCase(targetAudience) || "new_customer".equalsIgnoreCase(targetAudience)) {
+            return VoucherAudience.NEW_CUSTOMER;
+        }
+        if ("vip".equalsIgnoreCase(targetAudience)) {
+            return VoucherAudience.VIP;
+        }
+        return VoucherAudience.ALL;
+    }
+
+    private LocalDateTime startOfDay(LocalDate date) {
+        return date == null ? LocalDateTime.now() : date.atStartOfDay();
+    }
+
+    private LocalDateTime endOfDay(LocalDate date) {
+        return date == null ? LocalDateTime.now().plusDays(30) : date.atTime(LocalTime.MAX);
+    }
+
+    private String normalizeCode(String code) {
+        return code == null ? "" : code.trim().toUpperCase();
     }
 
     public record PromotionSummary(long active, long totalUsed, long expiringSoon) {}
